syntax = "proto3";

package raft_protocol;
option go_package = "./raft_protocol";

message RequestVoteRequest {
  uint32 term = 1;
  string candidateId = 2;
  uint32 lastLogIndex = 3;
  uint32 lastLogTerm = 4;
}

message RequestVoteResponse {
  uint32 term = 1;
  bool voteGranted = 2;
}

message AppendEntriesRequest {
  uint32 term = 1;
  string leaderId = 2;
  uint32 prevLogIndex = 3;
  uint32 prevLogTerm = 4;
  uint32 leaderCommit = 5;
}

message AppendEntriesResponse {
  uint32 term = 1;
  bool success = 2;
}

service RaftService {
  rpc RequestForVote(RequestVoteRequest) returns (RequestVoteResponse) {}

  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}
}
